--- a/Views/Superhero/Create.cshtml
+++ b/Views/Superhero/Create.cshtml
@@ -1,16 +1,17 @@
 ﻿@model Asp.netCoreMVCCRUD.Models.Superhero
 
 @{
-    ViewData["Title"] = "Add";
+    ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Add</h1>
+<h1>Create</h1>
 
 <h4>Superhero</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Add">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -28,7 +29,7 @@
                 <span asp-validation-for="Editorial" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Add" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
